--- a/meson.build
+++ b/meson.build
@@ -202,13 +202,6 @@ endforeach
 
 include = ','.join(plugins.keys())
 
-# serialize extra_env
-extra_env_list = []
-foreach key, value : extra_env
-  extra_env_list += key + ':' + value
-endforeach
-extra_env_str = ','.join(extra_env_list)
-
 plugins_install_dir = get_option('libdir') / 'gstreamer-1.0'
 pkgconfig_install_dir = get_option('libdir') / 'pkgconfig'
 
@@ -226,6 +219,7 @@ rs_plugins = custom_target('gst-plugins-rs',
   install_dir: plugins_install_dir,
   depends: depends,
   depfile: 'gst-plugins-rs.dep',
+  env: extra_env,
   command: [cargo_wrapper,
     'build',
     meson.current_build_dir(),
@@ -233,7 +227,6 @@ rs_plugins = custom_target('gst-plugins-rs',
     meson.global_build_root(),
     target,
     include,
-    extra_env_str,
     get_option('prefix'),
     get_option('libdir'),
     '--depfile', '@DEPFILE@',
@@ -315,13 +308,13 @@ custom_target('gst-webrtc-signalling-server',
   install: true,
   install_dir: get_option('bindir'),
   depfile: 'gst-webrtc-signalling-server.dep',
+  env: extra_env,
   command: [cargo_wrapper,
     'build',
     meson.current_build_dir(),
     meson.current_source_dir(),
     meson.global_build_root(),
     target,
-    '',
     '',
     get_option('prefix'),
     get_option('libdir'),
@@ -332,13 +325,13 @@ custom_target('gst-webrtc-signalling-server',
 
 test('tests',
   cargo_wrapper,
+  env: extra_env,
   args: ['test',
     meson.current_build_dir(),
     meson.current_source_dir(),
     meson.global_build_root(),
     target,
     include,
-    extra_env_str,
     get_option('prefix'),
     get_option('libdir')],
   timeout: 600)
