--- a/deny.toml
+++ b/deny.toml
@@ -72,7 +72,7 @@ version = "0.11"
 name = "crc"
 version = "1.8"
 
-# ignore duplicated sha-1/digest/block-buffer dependencies because librespot depends on an old version
+# Ignore various duplicated dependencies because librespot depends on an old versions
 [[bans.skip]]
 name = "block-buffer"
 version = "0.9"
@@ -82,6 +82,12 @@ version = "0.9"
 [[bans.skip]]
 name = "sha-1"
 version = "0.9"
+[[bans.skip]]
+name = "env_logger"
+version = "0.9"
+[[bans.skip]]
+name = "hmac"
+version = "0.11"
 
 # ignore duplicated wasi dependency because various crates depends on an old version
 [[bans.skip]]
@@ -113,14 +119,6 @@ version = "0.36"
 name = "windows_x86_64_msvc"
 version = "0.36"
 
-# Various crates depend on older miniz_oxide
-# https://github.com/rust-lang/backtrace-rs/pull/483
-# https://github.com/rust-lang/flate2-rs/pull/317
-# https://github.com/image-rs/image-png/pull/355
-[[bans.skip]]
-name = "miniz_oxide"
-version = "0.5"
-
 # cookie_store depends on older idna
 # https://github.com/pfernie/cookie_store/commit/b9c710f45550c5c8997f18a83e6fcc5998cf1726
 [[bans.skip]]
@@ -139,11 +137,6 @@ version = "0.11"
 [[bans.skip]]
 name = "memoffset"
 version = "0.6"
-
-# librespot depends on an older env_logger
-[[bans.skip]]
-name = "env_logger"
-version = "0.9"
 
 # Various crates depend on an older version of hermit-abi
 [[bans.skip]]
