gtk4: Add support for GL on Windows
This implements all the workarounds for Windows-specific complications
that the GTK GStreamer mediafile implementation also does.

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1266>

--- a/meson.build
+++ b/meson.build
@@ -262,6 +262,10 @@ if get_option('gtk4').allowed()
     if 'glx' in gl_platforms
       gtk4_features += 'x11glx'
     endif
+  elif host_system == 'windows'
+    if 'egl' in gl_platforms
+      gtk4_features += 'winegl'
+    endif
   endif
   plugins += {'gtk4': {
     'library': 'libgstgtk4',
