--- a/video/gtk4/Cargo.toml
+++ b/video/gtk4/Cargo.toml
@@ -28,6 +28,12 @@ once_cell = "1.0"
 gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", branch = "0.6", version = "0.6", features = ["v4_6"] }
 gst_gl = { package = "gstreamer-gl", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.20", version = "0.20", features = ["v1_16"] }
 
+[target.'cfg(target_os = "windows")'.dependencies]
+gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", features = ["v4_6"] }
+gst_gl = { package = "gstreamer-gl", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
+gdk_win32 = { package = "gdk4-win32", git = "https://github.com/gtk-rs/gtk4-rs", features = ["v4_4"]}
+windows-sys = { version = "0.42", features = ["Win32_Graphics_OpenGL", "Win32_Foundation", "Win32_Graphics_Gdi"] }
+
 [lib]
 name = "gstgtk4"
 crate-type = ["cdylib", "rlib"]
@@ -42,6 +48,7 @@ static = []
 wayland = ["gtk/v4_6", "gdk_wayland", "gst_gl", "gst_gl_wayland"]
 x11glx = ["gtk/v4_6", "gdk_x11", "gst_gl", "gst_gl_x11"]
 x11egl = ["gtk/v4_6", "gdk_x11", "gst_gl", "gst_gl_egl"]
+winegl = ["gdk_win32/egl", "gst_gl_egl"]
 capi = []
 doc = ["gst/v1_18"]
 
