meson: Add options for all plugins
Required a slight rework of the build file, and how options are passed
to cargo_wrapper.py

Necessitated a bump of the required gstreamer version to 1.20, which
should be fine for the meson build since its primary function is to be
built as part of the gstreamer monorepo build to get a dev env.

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1038>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -248,7 +248,7 @@ meson shared:
 meson static:
   extends: .meson
   script:
-    - meson build --default-library=static --prefix=$(pwd)/install -Dsodium=built-in
+    - meson build --default-library=static --prefix=$(pwd)/install -Dsodium-source=built-in
     - ninja -C build install
     - ./ci/generate-static-test.py test-static-link-all
     - cd test-static-link-all
@@ -277,7 +277,7 @@ documentation:
       -Dsharp=disabled
       -Dgst-examples=disabled
       -Drs=enabled
-      -Dgst-plugins-rs:sodium=system
+      -Dgst-plugins-rs:sodium-source=system
       -Dgst-docs:fatal_warnings=true
       -Dorc=disabled
   script:
@@ -332,7 +332,7 @@ documentation:
 #      -Dsharp=disabled
 #      -Dgst-examples=disabled
 #      -Drs=enabled
-#      -Dgst-plugins-rs:sodium=system
+#      -Dgst-plugins-rs:sodium-source=system
 #  script:
 #    - P=$(pwd)
 #    - cd ..
